--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-	id 'fabric-loom' version '0.9-SNAPSHOT'
+	id 'fabric-loom' version '0.11-SNAPSHOT'
 	id 'maven-publish'
 }
 
@@ -19,12 +19,12 @@ repositories {
 }
 
 dependencies {
-	minecraft "com.mojang:minecraft:21w42a"
-	mappings "net.fabricmc:yarn:21w42a+build.3:v2"
-	modImplementation "net.fabricmc:fabric-loader:0.12.3"
+	minecraft "com.mojang:minecraft:1.18.2"
+	mappings "net.fabricmc:yarn:1.18.2+build.3"
+	modImplementation "net.fabricmc:fabric-loader:0.14.6"
 
 	//Fabric api
-	modImplementation "net.fabricmc.fabric-api:fabric-api:0.41.1+1.18"
+	modImplementation "net.fabricmc.fabric-api:fabric-api:0.53.3+1.18.2"
 }
 
 processResources {
