--- a/gradle.properties
+++ b/gradle.properties
@@ -3,9 +3,9 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/versions.html
-	minecraft_version=21w42a
-	yarn_mappings=21w42a+build.3
-	loader_version=0.12.3
+	minecraft_version=1.18.2
+	yarn_mappings=1.18.2+build.3
+	loader_version=0.14.6
 
 # Mod Properties
 	mod_version = 1.0.0
@@ -13,4 +13,4 @@ org.gradle.jvmargs=-Xmx1G
 	archives_base_name = Lilli
 
 # Dependencies
-	fabric_version=0.41.1+1.18
+	fabric_version=0.53.3+1.18.2
